fix
code smells are taken to 0